--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/cors": "^2.8.6",
+    "@types/crypto-js": "^4.2.1",
     "@types/express": "^4.17.1",
     "@types/git-branch": "^2.0.2",
     "@types/helmet": "0.0.47",
@@ -32,6 +33,7 @@
     "axios": "^0.21.1",
     "child_process": "^1.0.2",
     "cors": "^2.8.5",
+    "crypto-js": "^4.2.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "full-git-history": "^1.2.4",
